# logxxi

./: CMakeLists.txt  README.md
examples/: 01_hello.cpp  02_advanced.cpp
